separate test and deploy workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,19 +13,19 @@ jobs:
           orb-path: ./src/prettier.yml
 
 workflows:
-  test_and_publish:
+  test:
     jobs:
       - validate
+  publish:
+    jobs:
       - orb-tools/publish:
           filters:
             tags:
               only: /\d+\.\d+\.\d+/
             branches:
               ignore: /.*/
-          requires:
-            - validate
           orb-path: src/prettier.yml
           orb-ref: miyajan/prettier:${CIRCLE_TAG}
           publish-token-variable: ${ORB_PUBLISHING_TOKEN}
-          validate: false
+          validate: true
           checkout: true
