--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
             branches:
               ignore: /.*/
           orb-path: src/prettier.yml
-          orb-ref: miyajan/prettier:${CIRCLE_TAG}
+          orb-ref: miyajan/prettier@${CIRCLE_TAG}
           publish-token-variable: ${ORB_PUBLISHING_TOKEN}
           validate: true
           checkout: true
